--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 	    <nav class="navbar navbar-toggleable-md" id="mainNav">
 	        <div class="container">
 	            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	                Menu <i class="fa fa-bars"></i> 
+	                Menu
+                  <!-- <i class="fa fa-bars"></i> -->
+              <span class="burgermenu"></span>
 	            </button>
+
 	            <a class="navbar-brand navbar-left" href="#">SendFriend</a>
 	            <div class="collapse navbar-collapse" id="navbarResponsive">
 	                <ul class="navbar-nav ml-auto">
